--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,5 +1,4 @@
 @import url(futura/stylesheet.css);
-
 html {
   --basil-green: #88a308;
   --dark-gray: #333333;
@@ -12,6 +11,18 @@ html {
   /* --breakpoint: 640px; */
 }
 
+html {
+  --basil-green: #88a308;
+  --dark-gray: #333333;
+  --light-gray: #e4e1d1;
+  --light-green: #f5faef;
+  --orange: #f90;
+  --light-orange: #ebbd4e;
+  --red: #f00;
+  --max-width: 840px;
+  --breakpoint: 640px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -22,14 +33,18 @@ html {
   color: #fff;
 }
 
-@media (min-width: 640px) {
 body {
-  font: 100%/1.5 'Segoe UI', Candara, 'Bitstream Vera Sans', 'DejaVu Sans',
-    'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref', sans-serif;
+  font: 100%/1.5 "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
   color: var(--dark-gray);
   max-width: var(--max-width);
-  /* margin: 0 auto;
-  margin-top: 24px; */
+}
+@media (min-width: 46.25em) {
+  body {
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    display: grid;
+    grid-template-areas: "header" "nav" "content" "footer";
+  }
 }
 
 h2,
@@ -37,11 +52,12 @@ h3 {
   color: var(--basil-green);
   margin: 8px 0;
   font-size: 1.4rem;
+  letter-spacing: -1px;
 }
 
 h2 {
   font-size: 2rem;
-  letter-spacing: -1px;
+  text-transform: capitalize;
 }
 
 a {
@@ -50,43 +66,44 @@ a {
   transition: color 0.5s linear;
 }
 
-a:hover {
-  color: var(--red);
-}
-/* li > h4 specific child selector */
 li > h4 {
   margin-top: 12px;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
 
 header {
   height: 120px;
   background: var(--basil-green);
-  border-radius: 8px 8px 0px 0px;
+  /* border-radius: 8px 8px 0px 0px; */
   position: relative;
 }
-
-/* header h1 { */
-  /* background: url(img/basil.png) no-repeat;
+@media (min-width: 46.25em) {
+  header {
+    border-radius: 8px 8px 0px 0px;
+    grid-area: header;
+  }
+}
+header h1 {
+  background: url(img/basil.png) no-repeat;
   font-family: FuturaStdLight, sans-serif;
   font-weight: normal;
   color: #fff;
   font-size: 5rem;
-  padding-left: 260px;
-  padding-top: 90px;
-  transform: translateX(-100px);
-  transform: translateY(-80px); */
-
+}
+@media (min-width: 46.25em) {
   header h1 {
-    background: url(img/basil.png) no-repeat;
-    font-family: FuturaStdLight, sans-serif;
-    font-weight: normal;
-    color: #fff;
-    font-size: 5rem;
+    padding-left: 240px;
+    padding-top: 90px;
+    transform: translate(-100px, -80px);
+    background-position: top left;
   }
-
-
+}
 header a.beta {
-  background: url('img/burst.svg') no-repeat;
+  background: url("img/burst.svg") no-repeat;
   color: #fff;
   font-size: 1.5rem;
   position: absolute;
@@ -98,20 +115,10 @@ header a.beta {
   text-align: center;
   text-transform: uppercase;
   transform: rotate(20deg);
-  transition: all 1s ease;
+  transition: all 0.5s ease;
 }
-
 header a.beta:hover {
-  transform: rotate(0deg) scale(1.2);
-}
-
-article,
-aside {
-  padding: 1rem;
-}
-
-aside li {
-  list-style: none;
+  transform: rotate(0deg) scale(1.4);
 }
 
 nav {
@@ -120,116 +127,116 @@ nav {
   padding: 0.5rem;
   display: flex;
   justify-content: space-between;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   align-items: center;
 }
-
 nav ul {
   display: flex;
 }
-
 nav li {
   list-style: none;
   margin-right: 0.5rem;
 }
-
-/* nav p {
-  margin-right: auto;
-} */
 nav a {
   text-align: center;
   font-size: 1.5rem;
-  padding: 8px;
+  padding: 8px 14px;
   color: #fff;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   border-radius: 6px;
   min-width: 120px;
   display: inline-block;
 }
-  
-  .nav-storeit a {
-    background: linear-gradient(to bottom, #fcde41 1%, #dfa910 100%);
+@media (min-width: 46.25em) {
+  nav a {
+    min-width: 120px;
   }
-  
-  .nav-storeit a:hover {
-    background: linear-gradient(to bottom, #dfa910 0%, #fcde41 100%);
-  }
-  
-  .nav-pickit a {
-    background: linear-gradient(to bottom, #abc841 0%, #6b861e 100%);
-  }
-  
-  .nav-pickit a:hover {
-    background: linear-gradient(to bottom, #6b861e 1%, #abc841 100%);
-  }
-  
-  .nav-cookit a {
-    background: linear-gradient(to bottom, #6f89c7 0%, #344e8b 100%);
-  }
-  
-  .nav-cookit a:hover {
-    background: linear-gradient(to bottom, #344e8b 1%, #6f89c7 100%);
-  }
+}
+nav .nav-storeit a {
+  background: linear-gradient(to bottom, #fcde41 1%, #dfa910 100%);
+}
+nav .nav-storeit a:hover {
+  background: linear-gradient(to bottom, #dfa910 0%, #fcde41 100%);
+}
+nav .nav-pickit a {
+  background: linear-gradient(to bottom, #abc841 0%, #6b861e 100%);
+}
+nav .nav-pickit a:hover {
+  background: linear-gradient(to bottom, #6b861e 1%, #abc841 100%);
+}
+nav .nav-cookit a {
+  background: linear-gradient(to bottom, #6f89c7 0%, #344e8b 100%);
+}
+nav .nav-cookit a:hover {
+  background: linear-gradient(to bottom, #344e8b 1%, #6f89c7 100%);
+}
 
+@media (min-width: 46.25em) {
+  .content {
+    grid-area: content;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 1rem;
+  }
+}
+.content a:hover {
+  color: var(--basil-green);
+}
 
-
-article li,
+article {
+  padding: 1rem;
+}
+@media (min-width: 46.25em) {
+  article {
+    grid-column: span 3;
+  }
+}
+article li {
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+}
 article ol {
   margin-left: 1rem;
   margin-bottom: 0.5rem;
 }
-
-figcaption {
+article figcaption {
   font-size: 0.75rem;
 }
 
-img {
-  width: 100%;
+aside {
+  padding: 1rem;
 }
-/* 
-@media (min-width: 640px) {
-  .content {
-    display: flex; */
+@media (min-width: 46.25em) {
+  aside {
+    grid-column: span 2;
+    background: var(--light-green);
+    box-shadow: -4px 0px 4px #ddd;
+  }
+}
+aside li {
+  list-style: none;
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+}
 
-    @media (min-width: 600px) {
-      body {
-        margin: 0 auto;
-        margin-top: 1.5rem;
-        display: grid;
-        grid-template-areas:
-          'header'
-          'nav'
-          'content'
-          'footer';
-      }
-      header {
-        border-radius: 8px 8px 0px 0px;
-        grid-area: header;
-      }
-      header h1 {
-        padding-left: 240px;
-        padding-top: 90px;
-        transform: translate(-100px, -80px);
-        background-position: top left;
-      }
-      nav {
-        grid-area: nav;
-      }
-      .content {
-        grid-area: content;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-column-gap: 1rem;
-      }
-      article {
-        grid-column: span 3;
-      }
-      aside {
-        grid-column: span 2;
-        background: var(--light-green);
-        box-shadow: -4px 0px 4px #ddd;
-      }
-      footer {
-        grid-area: footer;
-      }
-    }
+footer {
+  background-color: var(--basil-green);
+  padding: 1rem;
+  border-radius: 0 0 4px 4px;
+  margin-bottom: 2rem;
+}
+@media (min-width: 46.25em) {
+  footer {
+    grid-area: footer;
+  }
+}
+
+@font-face {
+  font-family: "FuturaStdLight";
+  src: url("futura/futurastd-light-webfont.eot");
+  src: url("futura/futurastd-light-webfont.eot?#iefix") format("embedded-opentype"), url("futura/futurastd-light-webfont.woff") format("woff"), url("futura/futurastd-light-webfont.ttf") format("truetype"), url("futura/futurastd-light-webfont.svg#FuturaStdLight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/*# sourceMappingURL=styles.css.map */
