--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,11 @@
-@import 'imports/variables';
+// @import 'imports/variables';
+@import 'imports/var';
 @import 'imports/base';
 @import 'imports/header';
 @import 'imports/nav';
 @import 'imports/content';
 @import 'imports/fonts';
+@import 'imports/modal';
 
 // * {
 //   color: red !important;
